--- a/src/listener/Listener.css
+++ b/src/listener/Listener.css
@@ -8,5 +8,6 @@
 
 .allSelectedSymbolsListener {
     justify-content: center;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
